Fixed body margin when notification is visible

--- a/app/views/style/config.sass
+++ b/app/views/style/config.sass
@@ -33,5 +33,7 @@ $header-subnavigation-height: $spacing
 
 $line-height-multiplier: 1.5
 
+$notification-height: rem( 90px )
+
 $transition-effect: ease
 $transition-duration: 250ms
